<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/nav_home"
        android:title="@string/text_menu_home"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_home_24"
        />
    <item android:id="@+id/nav_speed"
        android:title="@string/txt_menu_speed"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_directions_run_24"/>
    <item android:id="@+id/nav_heart"
    android:title="@string/txt_menu_heart"
    app:showAsAction="always"
        android:icon="@drawable/ic_baseline_favorite_24"/>
    <item android:id="@+id/nav_settings"
        android:title="@string/txt_menu_settings"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_settings_24"/>

</menu>