...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Speedometer"
    android:id="@+id/activityContainer">

    <com.google.android.material.tabs.TabLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/tab_layout"
        android:background="@color/colorOnSurfaceSlight"
        android:elevation="4dp"
        app:tabSelectedTextColor="@color/colorAccent"
        app:tabRippleColor="@color/colorAccent"
        app:tabTextColor="@color/colorOnPrimary"
        />
...
