<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:id="@+id/home_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
...
            </TableLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="@android:dimen/notification_large_icon_width"
            android:layout_height="@android:dimen/notification_large_icon_width"
            android:id="@+id/button_go"
            android:scaleX="2.5"
            android:scaleY="2.5"
            android:text="@string/txt_go_button"
            android:textAlignment="center"
            android:textSize="10dp"
            app:backgroundTint="@color/colorAccent"
...
